--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
-  <title>TrigguiApp – Detente. Lee. Conecta.</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>TrigguiApp – Un instante, un universo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin:0; padding:0; box-sizing:border-box; }
@@ -12,15 +12,32 @@
       font-family:'Archivo',sans-serif;
       background:linear-gradient(135deg,#0d0e1a,#1a1c2d);
       overflow:hidden;
-      transition: background 1s ease;
-      perspective: 1000px;
+      transition:background 1s ease;
+      perspective:1000px;
     }
+
     .main {
-      display:flex; flex-direction:column;
-      height:100dvh;
+      display:flex; flex-direction:column; height:100dvh;
       opacity:0;
-      animation:fadeIn 1.5s ease forwards;
+      animation:fadeIn 1.2s ease forwards;
     }
+
+    .header-message {
+      height:50px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:800;
+      font-size:clamp(1.2rem, 2.5vw, 1.8rem);
+      background:linear-gradient(to right,#ff6a00,#ee0979,#8e2de2,#4a00e0);
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
+      text-align:center;
+      letter-spacing:1px;
+      margin-top:10px;
+      text-shadow:0 0 12px rgba(255,255,255,0.08);
+    }
+
     .grid {
       flex:1;
       display:grid;
@@ -29,12 +46,14 @@
       grid-template-columns:1fr 1fr;
       grid-template-rows:1fr 1fr;
     }
+
     @media (orientation: landscape) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
+
     .block {
       position:relative;
       display:flex;
@@ -45,16 +64,22 @@
       font-weight:bold;
       font-size:clamp(1.2rem, 2vw, 1.5rem);
       color:#fff;
-      background-size:cover;
+      background-size:200% 200%;
       background-position:center;
       cursor:pointer;
-      transition:.5s;
+      transition:.4s ease-in-out;
       overflow:hidden;
       transform:scale(.95);
       opacity:0;
       animation:scaleFadeIn 1.3s forwards;
       padding:10px;
+      backdrop-filter:blur(4px);
     }
+
+    .block:hover {
+      transform:scale(1.02) rotateZ(1deg);
+    }
+
     .block-content {
       position:absolute;
       inset:0;
@@ -64,6 +89,7 @@
       padding:10px;
       text-align:center;
     }
+
     .accionable {
       font-family:'Poppins',sans-serif;
       font-size:clamp(1rem, 1.5vw, 1.2rem);
@@ -74,12 +100,15 @@
       opacity:0;
       animation:aparecer .6s forwards;
       box-shadow:0 8px 30px rgba(0,0,0,0.3);
+      background:rgba(0,0,0,0.4);
     }
+
     .portada-wrapper {
       width:100%; height:100%;
       display:flex; justify-content:center; align-items:center;
       animation:flotarTilt 7s ease-in-out infinite;
     }
+
     .portada-wrapper img {
       width:85%;
       max-height:90%;
@@ -88,9 +117,11 @@
       box-shadow:0 10px 24px rgba(0,0,0,0.4);
       transition:transform .6s;
     }
+
     .portada-wrapper img:hover {
       transform:scale(1.05) rotateY(5deg) rotateX(2deg);
     }
+
     .footer {
       display:flex;
       flex-direction:column;
@@ -99,6 +130,7 @@
       padding:2vh 2vw;
       min-height:110px;
     }
+
     .shock {
       background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);
       color:#fff;
@@ -113,6 +145,7 @@
       animation:pulse 2s infinite;
       max-width:90%;
     }
+
     .counter {
       font-size:clamp(1rem,1.4vw,1.2rem);
       color:#fff;
@@ -123,16 +156,19 @@
       opacity:0;
       animation:fadeInInstant .3s forwards;
     }
+
     .resaltado {
       font-size:1.1em;
       color:#ffcc00;
       font-weight:700;
     }
+
     .trigguiletras {
       height:20px;
       opacity:.9;
       margin-top:1.5vh;
     }
+
     .frase-magica {
       font-size:1rem;
       color:#ffeb3b;
@@ -140,7 +176,9 @@
       margin-top:1rem;
       font-family:'Poppins',sans-serif;
     }
+
     .hidden { display:none!important; }
+
     @keyframes fadeIn { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
     @keyframes scaleFadeIn { to {transform:scale(1); opacity:1;} }
     @keyframes aparecer { from {opacity:0; transform:scale(.95);} to {opacity:1; transform:scale(1);} }
@@ -154,6 +192,7 @@
 </head>
 <body>
   <div class="main">
+    <div class="header-message">¿Dónde está el libro? 📚</div>
     <div class="grid" id="gridContainer"></div>
     <div class="footer">
       <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
@@ -181,7 +220,7 @@
       const r = parseInt(hex.slice(1, 3), 16);
       const g = parseInt(hex.slice(3, 5), 16);
       const b = parseInt(hex.slice(5, 7), 16);
-      return `linear-gradient(135deg, ${hex}, rgba(${r + 20},${g + 20},${b + 20},0.8))`;
+      return `linear-gradient(135deg, ${hex}, rgba(${r+40},${g+40},${b+40},0.8))`;
     }
 
     function iniciarUI(libro) {
