--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,12 @@
     html,body {
       width:100%; height:100%;
       font-family:'Archivo',sans-serif;
-      background:linear-gradient(135deg,#0d0e1a,#1a1c2d);
+      background:radial-gradient(circle at 30% 30%, #0f0c29, #302b63, #24243e);
       overflow:hidden;
     }
-    body.dark { background:#000; }
+    body.dark {
+      background: radial-gradient(circle, #000000 0%, #1c1c1c 100%);
+    }
     .main {
       display:flex; flex-direction:column; height:100dvh;
       opacity:0; animation:fadeIn 1.5s ease forwards;
@@ -28,12 +30,13 @@
       padding:0 2vw;
     }
     .header-gradient {
-      font-weight:800;
+      font-weight:900;
       font-size:clamp(1.3rem,2.5vw,2rem);
-      background:linear-gradient(to right,#ff00cc,#00ffff,#00ff00,#ffff00,#ff0080);
+      background:linear-gradient(to right,#ff00f7,#00ffe7,#ffe600,#ff006e,#00c3ff);
       -webkit-background-clip:text;
       -webkit-text-fill-color:transparent;
-      animation:shine 6s linear infinite;
+      background-size:300% 300%;
+      animation:glowtext 8s linear infinite;
     }
     .grid {
       flex:1;
@@ -48,21 +51,26 @@
     }
     .block {
       position:relative;
-      display:flex; justify-content:center; align-items:center; text-align:center;
-      border-radius:18px;
+      display:flex; justify-content:center; align-items:center;
+      text-align:center;
+      border-radius:20px;
       font-weight:bold;
-      font-size:clamp(1rem,1.9vw,1.3rem);
-      color:#fff;
-      background-size:200% 200%;
+      font-size:clamp(1rem,2vw,1.4rem);
+      color:#ffffff;
+      background-size:250% 250%;
       background-position:center;
       cursor:pointer;
-      transition:.5s;
+      transition:transform .5s ease;
       overflow:hidden;
-      transform:scale(.95);
+      transform:scale(.94);
       opacity:0;
-      animation:scaleFadeIn 1.6s forwards;
-      padding:6px;
-      box-shadow:0 0 24px rgba(255,255,255,0.2);
+      animation:scaleFadeIn 1.2s forwards;
+      padding:10px;
+      box-shadow:0 0 32px rgba(255,255,255,0.08);
+    }
+    .block:hover {
+      transform:scale(1.02);
+      box-shadow:0 0 50px rgba(255,255,255,0.2);
     }
     .block-content {
       position:absolute;
@@ -70,22 +78,27 @@
       display:flex;
       justify-content:center;
       align-items:center;
-      padding:6px;
+      padding:10px;
       text-align:center;
     }
-    .label { z-index:1; }
+    .label {
+      z-index:2;
+      font-weight:900;
+      text-shadow: 0 0 10px rgba(0,0,0,0.6);
+    }
     .accionable {
-      color:#fff;
       font-family:'Poppins',sans-serif;
       font-size:clamp(.9rem,1.4vw,1.2rem);
       font-weight:600;
-      padding:10px;
-      border-radius:14px;
+      padding:10px 16px;
+      border-radius:18px;
       opacity:0;
-      animation:aparecer .6s forwards;
+      animation:aparecer .7s forwards;
       text-align:center;
-      box-shadow:0 8px 30px rgba(0,0,0,.4);
-      background: rgba(0,0,0,0.4);
+      box-shadow:0 10px 35px rgba(0,0,0,0.5);
+      background:rgba(0,0,0,0.4);
+      backdrop-filter: blur(8px);
+      z-index:3;
     }
     .portada-wrapper {
       width:100%; height:100%;
@@ -98,173 +111,174 @@
       max-height:90%;
       object-fit:contain;
       border-radius:20px;
-      box-shadow:0 10px 28px rgba(0,0,0,.5);
-      transition:transform .5s;
+      box-shadow:0 20px 35px rgba(0,0,0,.6);
+      transition:transform .6s ease;
     }
     .portada-wrapper img:hover {
-      transform:scale(1.03) rotateY(4deg) rotateX(2deg);
+      transform:scale(1.05) rotateY(6deg) rotateX(3deg);
     }
     .footer {
       height:var(--footer-height);
       display:flex; flex-direction:column;
       align-items:center; justify-content:flex-start;
-      padding:3vh 2vw 2vh;
+      padding:2.5vh 2vw 2vh;
     }
     .shock {
-      background:linear-gradient(135deg,#ff00cc,#ff8c00,#00f2fe);
+      background:linear-gradient(135deg,#ff00cc,#ff9900,#00f2fe);
       color:#fff;
       font-weight:bold;
       border:none;
-      border-radius:28px;
-      padding:10px 20px;
-      margin-top:6px;
-      font-size:clamp(.9rem,1.8vw,1.2rem);
+      border-radius:30px;
+      padding:12px 26px;
+      margin-top:8px;
+      font-size:clamp(1rem,2vw,1.3rem);
       cursor:pointer;
-      box-shadow:0 0 20px rgba(255,105,180,.6);
+      box-shadow:0 0 30px rgba(255,255,255,.3);
       animation:pulse 2s infinite;
-      max-width:95%;
     }
     .counter {
-      font-size:clamp(.9rem,1.2vw,1.1rem);
+      font-size:clamp(1rem,1.3vw,1.1rem);
       color:#fff;
-      margin-top:4px;
+      margin-top:6px;
       font-family:'Poppins',sans-serif;
       text-align:center;
       white-space:nowrap;
       opacity:0;
-      animation:fadeInInstant .3s forwards;
+      animation:fadeInInstant .4s forwards;
     }
     .resaltado {
-      font-size:1.1em;
-      color:#00ffcc;
-      font-weight:700;
+      font-size:1.2em;
+      color:#00f7ff;
+      font-weight:800;
     }
     .trigguiletras {
-      height:20px;
-      opacity:.9;
+      height:22px;
+      opacity:.95;
       margin-top:1.5vh;
     }
     .hidden { display:none!important; }
     .frase-magica {
       font-size:1rem;
-      color:#ffeb3b;
+      color:#ffe600;
       text-align:center;
       margin-top:1rem;
       font-family:'Poppins',sans-serif;
       animation:fadeIn 1.4s ease;
     }
+
     @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
     @keyframes fadeInInstant{to{opacity:1}}
     @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
     @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-    @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.06)}}
-    @keyframes glow{0%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff15,#0000)}100%{background:radial-gradient(circle,#ffffff05,#0000)}}
-    @keyframes shine {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 100% 50%; }
+    @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
+    @keyframes glow{0%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff20,#0000)}100%{background:radial-gradient(circle,#ffffff05,#0000)}}
+    @keyframes glowtext { 
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
     }
   </style>
 </head>
 <body>
-<div class="main">
-  <div class="header-message"><div class="header-gradient">¿Dónde está el libro? 📚</div></div>
-  <div class="grid" id="gridContainer"></div>
-  <div class="footer">
-    <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
-    <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
-    <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
-    <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
+  <div class="main">
+    <div class="header-message"><div class="header-gradient">¿Dónde está el libro? 📚</div></div>
+    <div class="grid" id="gridContainer"></div>
+    <div class="footer">
+      <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
+      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
+      <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
+      <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
+    </div>
   </div>
-</div>
-<script>
-const $ = id => document.getElementById(id);
-let libroActual, bloquePortada, revelado = false;
-const emojis = ["🌊","🛡️","🧠","📈","📘","🔮","❤️","✨","🪞"];
+  <script>
+    const $ = id => document.getElementById(id);
+    let libroActual, bloquePortada, revelado = false;
+    const emojis = ["🌊","🛡️","🧠","📈","📘","🔮","❤️","✨","🪞"];
 
-fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
-  .then(res => res.json())
-  .then(data => {
-    const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
-    libroActual = libro;
-    bloquePortada = Math.floor(Math.random()*4);
-    iniciarUI(libro);
-  });
+    fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
+      .then(res => res.json())
+      .then(data => {
+        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
+        libroActual = libro;
+        bloquePortada = Math.floor(Math.random()*4);
+        iniciarUI(libro);
+      });
 
-function generarGradiente(color) {
-  const h = parseInt(color.slice(1,3),16),
-        l = parseInt(color.slice(3,5),16),
-        s = parseInt(color.slice(5,7),16);
-  const bright = `rgba(${Math.min(h+60,255)},${Math.min(l+60,255)},${Math.min(s+60,255)},0.9)`;
-  return `linear-gradient(135deg, ${color}, ${bright})`;
-}
-
-function iniciarUI(libro) {
-  const grid = $("gridContainer");
-  $("logoTriggui").classList.remove("hidden");
-  grid.innerHTML = "";
-  libro.palabras.forEach((palabra, i) => {
-    const div = document.createElement("div");
-    div.className = "block";
-    div.id = `bloque${i}`;
-    div.style.background = generarGradiente(libro.colores[i] || "#555");
-    const emoji = emojis[i % emojis.length];
-    div.innerHTML = `
-      <div class="block-content label">${emoji} ${palabra}</div>
-      <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>`;
-    div.onclick = () => manejarClick(i);
-    grid.appendChild(div);
-  });
-}
-
-function manejarClick(i) {
-  if (revelado) return location.reload();
-  if (i === bloquePortada) revelarTodo();
-  else {
-    $(`bloque${i}Text`).classList.remove("hidden");
-    $(`bloque${i}`).querySelector(".label").classList.add("hidden");
-  }
-}
-
-function revelarTodo() {
-  libroActual.palabras.forEach((_, i) => {
-    const block = $(`bloque${i}`);
-    if (i === bloquePortada) {
-      block.innerHTML = "";
-      const wrapper = document.createElement("div");
-      wrapper.className = "portada-wrapper";
-      const img = document.createElement("img");
-      img.src = libroActual.portada;
-      img.alt = "Portada";
-      wrapper.appendChild(img);
-      block.appendChild(wrapper);
-      block.style.background = "none";
-    } else {
-      $(`bloque${i}Text`).classList.remove("hidden");
-      block.querySelector(".label").classList.add("hidden");
+    function generarGradiente(color) {
+      const h = parseInt(color.slice(1,3),16),
+            l = parseInt(color.slice(3,5),16),
+            s = parseInt(color.slice(5,7),16);
+      const bright = `rgba(${Math.min(h+60,255)},${Math.min(l+60,255)},${Math.min(s+60,255)},0.9)`;
+      return `linear-gradient(145deg, ${color}, ${bright})`;
     }
-  });
-  document.body.classList.add("dark");
-  document.body.style.background = libroActual.fondo;
-  $("logoTriggui").classList.add("hidden");
-  $("fraseMagica").classList.remove("hidden");
-  setTimeout(() => {
-    $("fraseMagica").classList.add("hidden");
-    $("shockBtn").classList.remove("hidden");
-  }, 2500);
-  revelado = true;
-}
 
-$("shockBtn").onclick = async () => {
-  $("shockBtn").classList.add("hidden");
-  $("contador").classList.remove("hidden");
-  try {
-    const res = await fetch("https://triggui-api.vercel.app/api/increment");
-    const data = await res.json();
-    $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
-  } catch {
-    $("contador").innerText = "📚 ¡Error al contar libros!";
-  }
-};
-</script>
+    function iniciarUI(libro) {
+      const grid = $("gridContainer");
+      $("logoTriggui").classList.remove("hidden");
+      grid.innerHTML = "";
+      libro.palabras.forEach((palabra, i) => {
+        const div = document.createElement("div");
+        div.className = "block";
+        div.id = `bloque${i}`;
+        div.style.background = generarGradiente(libro.colores[i] || "#555");
+        const emoji = emojis[i % emojis.length];
+        div.innerHTML = `
+          <div class="block-content label">${emoji} ${palabra}</div>
+          <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>`;
+        div.onclick = () => manejarClick(i);
+        grid.appendChild(div);
+      });
+    }
+
+    function manejarClick(i) {
+      if (revelado) return location.reload();
+      if (i === bloquePortada) revelarTodo();
+      else {
+        $(`bloque${i}Text`).classList.remove("hidden");
+        $(`bloque${i}`).querySelector(".label").classList.add("hidden");
+      }
+    }
+
+    function revelarTodo() {
+      libroActual.palabras.forEach((_, i) => {
+        const block = $(`bloque${i}`);
+        if (i === bloquePortada) {
+          block.innerHTML = "";
+          const wrapper = document.createElement("div");
+          wrapper.className = "portada-wrapper";
+          const img = document.createElement("img");
+          img.src = libroActual.portada;
+          img.alt = "Portada";
+          wrapper.appendChild(img);
+          block.appendChild(wrapper);
+          block.style.background = "none";
+        } else {
+          $(`bloque${i}Text`).classList.remove("hidden");
+          block.querySelector(".label").classList.add("hidden");
+        }
+      });
+      document.body.classList.add("dark");
+      document.body.style.background = libroActual.fondo;
+      $("logoTriggui").classList.add("hidden");
+      $("fraseMagica").classList.remove("hidden");
+      setTimeout(() => {
+        $("fraseMagica").classList.add("hidden");
+        $("shockBtn").classList.remove("hidden");
+      }, 2500);
+      revelado = true;
+    }
+
+    $("shockBtn").onclick = async () => {
+      $("shockBtn").classList.add("hidden");
+      $("contador").classList.remove("hidden");
+      try {
+        const res = await fetch("https://triggui-api.vercel.app/api/increment");
+        const data = await res.json();
+        $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
+      } catch {
+        $("contador").innerText = "📚 ¡Error al contar libros!";
+      }
+    };
+  </script>
 </body>
 </html>
