--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
     <div class="header-message">¿Dónde está el libro físico? 📚</div>
     <div class="grid" id="gridContainer"></div>
     <div class="footer">
-      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas!</button>
+      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste libro físico!</button>
       <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
       <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
     </div>
