--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       flex-direction: column;
       height: 100vh;
       opacity: 0;
-      animation: fadeIn 1s ease forwards;
+      animation: fadeIn 1.2s ease forwards;
     }
 
     .header-message {
@@ -42,13 +42,14 @@
     }
 
     .header-gradient {
-      font-weight: 800;
-      font-size: clamp(1.3rem, 2.5vw, 2rem);
-      background: linear-gradient(to right, #ff8a00, #e52e71, #9b00ff, #00c6ff);
+      font-weight: 900;
+      font-size: clamp(1.4rem, 2.6vw, 2.2rem);
+      background: linear-gradient(to right, #f72585, #7209b7, #3a0ca3, #4361ee, #4cc9f0);
+      background-size: 400% auto;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      animation: pulseText 8s linear infinite;
       white-space: nowrap;
-      animation: colorFlow 6s infinite linear;
     }
 
     .grid {
@@ -84,7 +85,7 @@
       overflow: hidden;
       transform: scale(1);
       will-change: transform, opacity;
-      animation: popIn 1.2s ease forwards;
+      animation: popIn 0.8s ease forwards;
     }
 
     .block-content {
@@ -145,16 +146,16 @@
     }
 
     .shock {
-      background: linear-gradient(135deg, #ff00cc, #3333ff, #00ffff);
+      background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
       color: white;
       font-weight: bold;
       border: none;
-      border-radius: 28px;
-      padding: 12px 22px;
+      border-radius: 999px;
+      padding: 12px 26px;
       margin-top: 8px;
       font-size: clamp(.9rem, 1.8vw, 1.2rem);
       cursor: pointer;
-      box-shadow: 0 0 16px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 0 16px rgba(255, 255, 255, 0.15);
       animation: pulse 2s infinite;
       max-width: 95%;
     }
@@ -213,9 +214,9 @@
       50% { background: radial-gradient(circle, #ffffff20, #0000); }
     }
 
-    @keyframes colorFlow {
-      0% { filter: hue-rotate(0deg); }
-      100% { filter: hue-rotate(360deg); }
+    @keyframes pulseText {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 200% 50%; }
     }
   </style>
 </head>
@@ -252,7 +253,7 @@
       const h = parseInt(color.slice(1,3),16),
             l = parseInt(color.slice(3,5),16),
             s = parseInt(color.slice(5,7),16);
-      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.8)`;
+      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.85)`;
       return `linear-gradient(135deg, ${color}, ${light})`;
     }
 
