--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
     </div>
     <div class="grid" id="gridContainer"></div>
     <div class="footer" id="footer">
-      <div class="frase-magica hidden" id="fraseMagica">✨ Este fue el empujón. Abre el que tengas a la mano..</div>
+      <div class="frase-magica hidden" id="fraseMagica">✨ Este fue el empujón. Abre el que tengas a la mano</div>
       <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste uno físico!</button>
       <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
       <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
